<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2021, Petr Laštovička as Lasta apps, All rights reserved
  ~
  ~     This file is part of TheBubble Opener.
  ~
  ~     TheBubble Opener is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     TheBubble Opener is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with TheBubble Opener.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="label,licensed,nutshell,read_policy,have_read,agree"
        app:flow_verticalGap="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/policy_label"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/licensed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/policy_licensed"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nutshell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/policy_nutshell"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/read_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_read_privacy_policy" />

    <CheckBox
        android:id="@+id/have_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_have_read" />

    <Button
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_agree" />
</androidx.constraintlayout.widget.ConstraintLayout>